# MemeMaster

./: .gitignore  README.md  analysis_options.yaml  flutter_launcher_icons.yaml  pubspec.yaml  session-ses_0c57.md
.github/workflows/: build-android.yml  ci.yml  sync-gitee-mirror.yml
.sisyphus/plans/: 2026-07-02-llm-vision-analysis.md  2026-07-02-model-download-manager.md
android/: build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  cmake_wrapper.sh  meme_llm.cpp  meme_llm.h  ninja_wrapper.py  ninja_wrapper.sh
android/app/src/main/cpp/cmake/: vulkan-android-prelude.cmake
android/app/src/main/kotlin/com/memehelper/app/: MainActivity.kt
android/app/src/main/kotlin/com/mememaster/app/: MainActivity.kt
android/app/src/main/res/xml/: data_extraction_rules.xml  file_paths.xml
assets/prompts/: vision_system_en.txt  vision_system_zh.txt  vision_user_en.txt  vision_user_zh.txt
docs/: DEVELOPMENT.md  GPU_ACCELERATION_FIX.md  GPU_BACKEND_REVIEW.md  USAGE.md
docs/superpowers/plans/: 2026-06-29-meme-manager-implementation.md  2026-07-01-s3-sync-implementation.md  2026-07-02-native-llm.md  2026-07-06-meme-export-import-plan.md  2026-07-09-mememaster-linux-port-plan.md  2026-07-10-mememaster-macos-port-plan.md  2026-07-15-windows-port-plan.md
docs/superpowers/specs/: 2026-06-29-meme-manager-design.md  2026-06-30-search-page-design.md  2026-07-01-s3-sync-design.md  2026-07-02-llm-meme-analysis-design.md  2026-07-02-model-download-manager-design.md  2026-07-02-native-llm-design.md  2026-07-06-ai-chat-test-design.md  2026-07-06-meme-export-import-design.md  2026-07-09-mememaster-linux-port-design.md  2026-07-10-mememaster-macos-port-design.md  2026-07-15-windows-port-design.md  2026-07-18-macos-tesseract-design.md
docs/superpowers/specs/2026-06-29-meme-manager-design/: 01-architecture.md  02-database.md  03-llm-pipeline.md  04-search-engine.md  05-sync-storage.md  06-ui-ux.md  07-test-plan.md  08-platform-channels.md  09-build-guide.md  10-performance-budget.md  11-user-interaction.md  README.md
integration_test/: ocr_test.dart
lib/: app.dart  main.dart  main_screen.dart  router.dart
lib/core/database/: database.dart  database.g.dart
lib/core/database/daos/: ai_analysis_queue_dao.dart  album_dao.dart  analysis_queue_dao.dart  color_analysis_queue_dao.dart  color_dao.dart  meme_dao.dart  ocr_analysis_queue_dao.dart  sync_state_dao.dart  tag_dao.dart  user_stats_dao.dart
lib/core/database/tables/: albums_table.dart  analysis_queue_table.dart  colors_table.dart  embeddings_table.dart  meme_albums_table.dart  memes_table.dart  parallel_analysis_queue_tables.dart  sync_state_table.dart  tables.dart  tags_table.dart  user_stats_table.dart
lib/core/image/: color_extraction_config.dart  color_extraction_strategies.dart  color_extractor.dart
lib/core/llm/: config.dart  enricher.dart  llm_service.dart  local_config.dart  local_service.dart  model_manager.dart  models.dart  native_bindings.dart  ollama_service.dart  openai_service.dart  vision_enricher.dart
lib/core/models/: analysis_pipeline_config.dart  analysis_pipeline_config.freezed.dart  analysis_status.dart  models.dart  search_level.dart  tag_source.dart
lib/core/ocr/: ocr_service.dart  tesseract_bindings.dart  windows_ocr_bindings.dart
lib/core/repositories/: album_repository.dart  color_repository.dart  meme_repository.dart  repositories.dart
lib/core/utils/: color_utils.dart
lib/features/albums/: album_provider.dart
lib/features/gallery/: gallery_provider.dart  gallery_screen.dart  meme_detail_screen.dart
lib/features/import/: import_preview_sheet.dart  import_receiver_screen.dart  import_screen.dart
lib/features/llm/: llm_chat_screen.dart
lib/features/scan/: scan_screen.dart
lib/features/search/: color_picker_dialog.dart  color_picker_palette.dart  search_screen.dart
lib/features/settings/: ai_analysis_config_screen.dart  llm_settings_screen.dart  local_model_config_screen.dart  log_viewer_screen.dart  model_manager_screen.dart  s3_sync_screen.dart  settings_screen.dart  user_stats_screen.dart
lib/l10n/: app_en.arb  app_localizations.dart  app_localizations_en.dart  app_localizations_zh.dart  app_zh.arb
lib/services/: analysis_queue_scheduler.dart  clipboard_service.dart  clipboard_stub.dart  config_exporter.dart  export_path_service.dart  file_storage_service.dart  import_service.dart  log_service.dart  meme_detector.dart  meme_export_service.dart  meme_import_service.dart  model_search_service.dart  opencl_diagnostic.dart  parallel_analysis_scheduler.dart  s3_config.dart  s3_sync_serializer.dart  s3_sync_service.dart  search_service.dart  shared_media_handler.dart
linux/: CMakeLists.txt
linux/cpp/: CMakeLists.txt  tesseract_ocr.cpp  tesseract_ocr.h
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
linux/runner/: CMakeLists.txt  my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner/: AppDelegate.swift  MainFlutterWindow.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Base.lproj/: MainMenu.xib
macos/Runner/Configs/: AppInfo.xcconfig
macos/cpp/: CMakeLists.txt  fix-tesseract-deps.sh  meme_llm.cpp  tesseract_ocr.cpp
macos/macos.tmp/Flutter/: GeneratedPluginRegistrant.swift
scripts/: build-macos-llm.sh  download-tesseract-dlls.ps1  init-third-party.sh  patch-cargokit.sh  test-windows-ocr.cs  test-windows-ocr.ps1
test/: 10_40_38.664 IN.txt  11_48_35.804 IN.txt  log.txt  widget_test.dart
test/core/llm/: enricher_test.dart  models_test.dart
test/core/utils/: color_utils_test.dart
test/services/: ocr_test.dart  s3_config_test.dart  search_service_test.dart
windows/: CMakeLists.txt
windows/cpp/: CMakeLists.txt  meme_llm.cpp  meme_llm.h  tesseract_ocr.cpp  windows_ocr.cpp  windows_ocr.h
